--- a/queima/index.html
+++ b/queima/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="container">
-            <table id="salaneg" style="display: none;"><caption>Miners da Sala NEGOCIÁVEIS</caption></table>
+            <table id="salaneg" style="display: none; title: 'Miners da Sala NEGOCIÁVEIS'"></table>
             <table id="salaineg" style="display: none;"><caption>Miners da Sala INEGOCIÁVEIS</caption></table>
             <table id="invneg" style="display: none;"><caption>Miners da Inventário NEGOCIÁVEIS</caption></table>
             <table id="invineg" style="display: none;"><caption>Miners da Inventário INEGOCIÁVEIS</caption></table>
