--- a/queima/index.html
+++ b/queima/index.html
@@ -39,17 +39,17 @@
         <div class="container">
             <!-- Link da Sala -->
             <div class="input-container">
-                <label for="field1">Link da Sala (após /p/)</label>
+                <label>Link da Sala (após /p/)</label>
                 <input type="text" id="field1" class="textInput" placeholder="RKFox">
             </div>
             <!-- Dados do Inventário -->
             <div class="input-container">
-                <label for="field2">Dados do Inventário</label>
+                <label>Dados do Inventário</label>
                 <input type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
             </div>
 
             <!-- Conversão de Pontos -->
-            <div class="container">
+            <div>
                 <div>
                     <h3>Conversão de Pontos</h3>
                 </div>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="container">
-            <table id="salaneg" style="display: none; title: 'Miners da Sala NEGOCIÁVEIS'"></table>
+            <table id="salaneg" style="display: none;"><caption>Miners da Sala NEGOCIÁVEIS</caption></table>
             <table id="salaineg" style="display: none;"><caption>Miners da Sala INEGOCIÁVEIS</caption></table>
             <table id="invneg" style="display: none;"><caption>Miners da Inventário NEGOCIÁVEIS</caption></table>
             <table id="invineg" style="display: none;"><caption>Miners da Inventário INEGOCIÁVEIS</caption></table>
