--- a/queima/index.html
+++ b/queima/index.html
@@ -37,15 +37,21 @@
         <h3>Tutorial: youtube(em breve)</h3>
         
         <div class="container">
+            <div>
             <!-- Link da Sala -->
-            <div class="input-container">
-                <label>Link da Sala (após /p/)</label>
+            <div class="calc">
+                <h3>Link da Sala (após /p/)</h3>
+            </div>
+            <div class="input-container">                
                 <input type="text" id="field1" class="textInput" placeholder="RKFox">
             </div>
             <!-- Dados do Inventário -->
+            <div class="calc">
+                <h3>Dados do Inventário)</h3>
+            </div>
             <div class="input-container">
-                <label>Dados do Inventário</label>
                 <input type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
+            </div>
             </div>
 
             <!-- Conversão de Pontos -->
