--- a/queima/index.html
+++ b/queima/index.html
@@ -59,14 +59,20 @@
                 <div>
                     <h3>Conversão de Pontos</h3>
                 </div>
-                <div class="input-container">
-                    <label for="field3">Quantos Ths por 1000 pontos?</label>
-                    <input type="text" class="textInput" id="field3" value="100">
-                </div>
-                <div class="input-container">
-                    <label for="field4">Quantos % por 1000 pontos?</label>
-                    <input type="text" class="textInput" id="field4" value="10">
-                </div>
+                <table class="input-table">
+        <tr>
+            <td><label for="field3">Quantos Ths por 1000 pontos?</label></td>
+        </tr>
+        <tr>
+            <td><input type="text" class="textInput" id="field3" value="100"></td>
+        </tr>
+        <tr>
+            <td><label for="field4">Quantos % por 1000 pontos?</label></td>
+        </tr>
+        <tr>
+            <td><input type="text" class="textInput" id="field4" value="10"></td>
+        </tr>
+    </table>
             </div>
 
             <!-- Botão de Organizar -->
