--- a/queima/index.html
+++ b/queima/index.html
@@ -59,7 +59,7 @@
                 <div>
                     <h3>Conversão de Pontos</h3>
                 </div>
-                <table class="input-table">
+                <table border="0">
         <tr>
             <td><label for="field3">Quantos Ths por 1000 pontos?</label></td>
         </tr>
