--- a/queima/index.html
+++ b/queima/index.html
@@ -56,23 +56,21 @@
 
             <!-- Conversão de Pontos -->
             <div>
-                <div>
-                    <h3>Conversão de Pontos</h3>
-                </div>
-                <table border="0">
-        <tr>
-            <td><label for="field3">Quantos Ths por 1000 pontos?</label></td>
-        </tr>
-        <tr>
-            <td><input type="text" class="textInput" id="field3" value="100"></td>
-        </tr>
-        <tr>
-            <td><label for="field4">Quantos % por 1000 pontos?</label></td>
-        </tr>
-        <tr>
-            <td><input type="text" class="textInput" id="field4" value="10"></td>
-        </tr>
-    </table>
+                <h3 style=" margin-bottom: 2px;">Conversão de Pontos</h3>
+                <table style="border: none;">
+                    <tr>
+                        <td><label for="field3">Quantos Ths por 1000 pontos?</label></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="textInput" id="field3" value="100"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="field4">Quantos % por 1000 pontos?</label></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="textInput" id="field4" value="10"></td>
+                    </tr>
+                </table>
             </div>
 
             <!-- Botão de Organizar -->
