--- a/queima/index.html
+++ b/queima/index.html
@@ -40,24 +40,24 @@
             <div>
             <!-- Link da Sala -->
             <div class="calc">
-                <h3>Link da Sala (após /p/)</h3>
+                <h3 style="margin-bottom: 2px;">Link da Sala (após /p/)</h3>
             </div>
             <div class="input-container">                
-                <input type="text" id="field1" class="textInput" placeholder="RKFox">
+                <input type="text" style="margin-top: 0px;" id="field1" class="textInput" placeholder="RKFox">
             </div>
             <!-- Dados do Inventário -->
             <div class="calc">
-                <h3>Dados do Inventário)</h3>
+                <h3 style="margin-bottom: 2px;">Dados do Inventário)</h3>
             </div>
             <div class="input-container">
-                <input type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
+                <input style="margin-top: 0px;" type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
             </div>
             </div>
 
             <!-- Conversão de Pontos -->
             <div>
-                <h3 style=" margin-bottom: 1px;">Conversão de Pontos</h3>
-                <table style="border: none;">
+                <h3 style="margin-bottom: 2px;">Conversão de Pontos</h3>
+                <table style="border: none; margin-top: 0px;">
                     <tr>
                         <td><label for="field3">Quantos Ths por 1000 pontos?</label></td>
                     </tr>
