--- a/queima/index.html
+++ b/queima/index.html
@@ -40,14 +40,14 @@
             <div>
             <!-- Link da Sala -->
             <div class="calc">
-                <h3 style="margin-bottom: 2px;">Link da Sala (após /p/)</h3>
+                <h3 style="margin-bottom: 1px;">Link da Sala (após /p/)</h3>
             </div>
             <div class="input-container">                
                 <input type="text" style="margin-top: 0px;" id="field1" class="textInput" placeholder="RKFox">
             </div>
             <!-- Dados do Inventário -->
             <div class="calc">
-                <h3 style="margin-bottom: 2px;">Dados do Inventário)</h3>
+                <h3 style="margin-bottom: 1px;">Dados do Inventário</h3>
             </div>
             <div class="input-container">
                 <input style="margin-top: 0px;" type="text" id="field2" class="textInput" placeholder="Cole os dados do seu inventário">
