--- a/queima/index.html
+++ b/queima/index.html
@@ -75,7 +75,7 @@
 
             <!-- Botão de Organizar -->
             <div class="input-container">
-                <button style="margin-top: 5px;" id="searchButton" onclick="organizar()">ORGANIZAR</button>
+                <button id="searchButton" onclick="organizar()">ORGANIZAR</button>
             </div>
         </div>
 
