--- a/queima/index.html
+++ b/queima/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container"  style="margin-top: 10px;" >
             <table id="salaneg" style="display: none;"><caption>Miners da Sala NEGOCIÁVEIS</caption></table>
             <table id="salaineg" style="display: none;"><caption>Miners da Sala INEGOCIÁVEIS</caption></table>
             <table id="invneg" style="display: none;"><caption>Miners da Inventário NEGOCIÁVEIS</caption></table>
