--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -42,6 +42,11 @@
                 <label><input type="radio" name="option" value="op2"> 2 slots</label>
                 <label><input type="radio" name="option" value="op3" checked> ambos</label>
             </div>
+            <div class="radio-buttons">
+                <label><input type="radio" name="neg" value="op1"> Negociável</label>
+                <label><input type="radio" name="neg" value="op2"> Inegociável</label>
+                <label><input type="radio" name="neg" value="op3" checked> ambos</label>
+            </div>
             <div>
                 <img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;">
                 <h3 id="welcomeMessage"></h3>
