--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -65,7 +65,9 @@
                         </tr>
                         <tr>
                             <td>Miner:</td>
-                            <td><span id="nome1"></span></td>
+                            <td>
+                                <img id="img1" src="" style="display: none; margin: auto; width: 50px; height: auto;">
+                                <span id="nome1" style="display: block; margin-top: 5px;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
