--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -61,7 +61,8 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img1" src="" style="display: none; margin: auto;"></td>
+                            <td colspan="2">
+                                <!-- <img id="img1" src="" style="display: none; margin: auto;"></td> -->
                         </tr>
                         <tr>
                             <td>Miner:</td>
