--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -61,14 +61,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2">
-                                <!-- <img id="img1" src="" style="display: none; margin: auto;"></td> -->
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img1" src="" style="display: none; margin: auto; width: 50px; height: auto;">
+                                <img id="img1" src="" style="display: none; margin: auto; width: 150px; height: auto;">
                                 <span id="nome1" style="display: block; margin-top: 5px;"></span></td>
+                                <span id="sell1" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
