--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -99,11 +99,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img2" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome2"></span></td>
+                            <td>
+                                <img id="img2" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome2" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell2" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -135,13 +135,13 @@
                             <th colspan="2">3º Lugar</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td colspan="2"><img id="img3" src="" style="display: none; margin: auto;"></td>
-                        </tr>
+                   <tbody>
                         <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome3"></span></td>
+                            <td>
+                                <img id="img3" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome3" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell3" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -175,11 +175,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img4" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome4"></span></td>
+                            <td>
+                                <img id="img4" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome4" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell4" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -213,11 +213,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img5" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome5"></span></td>
+                            <td>
+                                <img id="img5" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome5" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell5" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -251,11 +251,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img6" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome6"></span></td>
+                            <td>
+                                <img id="img6" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome6" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell6" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -289,11 +289,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img7" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome7"></span></td>
+                            <td>
+                                <img id="img7" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome7" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell7" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -327,11 +327,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img8" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome8"></span></td>
+                            <td>
+                                <img id="img8" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome8" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell8" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -365,11 +365,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img9" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome9"></span></td>
+                            <td>
+                                <img id="img9" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome9" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell9" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -403,11 +403,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="2"><img id="img10" src="" style="display: none; margin: auto;"></td>
-                        </tr>
-                        <tr>
                             <td>Miner:</td>
-                            <td style="font-weight: bold"><span id="nome10"></span></td>
+                            <td>
+                                <img id="img10" src="" style="display: none; margin: auto; width: 130px; height: auto;">
+                                <span id="nome10" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="sell10" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
