--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -65,7 +65,7 @@
                             <td>
                                 <img id="img1" src="" style="display: none; margin: auto; width: 130px; height: auto;">
                                 <span id="nome1" style="display: block; margin-top: 2px;"></span></td>
-                                <span id="sell1" style="display: block;"></span></td>
+                                <span id="sell1"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
