--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -65,7 +65,7 @@
                             <td>
                                 <img id="img1" src="" style="display: none; margin: auto; width: 130px; height: auto;">
                                 <span id="nome1" style="display: block; margin-top: 2px;"></span></td>
-                                <span id="sell1"></span></td>
+                                <span id="sell1" style="display: block;"></span></td>
                         </tr>
                         <tr>
                             <td>Poder:</td>
@@ -102,7 +102,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img2" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome2" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome2" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell2" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -140,7 +140,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img3" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome3" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome3" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell3" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -178,7 +178,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img4" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome4" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome4" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell4" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -216,7 +216,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img5" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome5" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome5" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell5" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -254,7 +254,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img6" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome6" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome6" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell6" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -292,7 +292,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img7" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome7" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome7" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell7" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -330,7 +330,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img8" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome8" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome8" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell8" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -368,7 +368,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img9" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome9" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome9" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell9" style="display: block;"></span></td>
                         </tr>
                         <tr>
@@ -406,7 +406,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img10" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome10" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome10" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell10" style="display: block;"></span></td>
                         </tr>
                         <tr>
