--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -64,7 +64,7 @@
                             <td>Miner:</td>
                             <td>
                                 <img id="img1" src="" style="display: none; margin: auto; width: 130px; height: auto;">
-                                <span id="nome1" style="display: block; margin-top: 2px;"></span></td>
+                                <span id="nome1" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell1" style="display: block;"></span></td>
                         </tr>
                         <tr>
