--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -448,6 +448,15 @@
             <h4><p><center>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></center></p></h4>
         </div>
     </div>
+    <div id="popup" class="popup-container" style="display: none;">
+    <div class="popup-content">
+        <span class="close-popup" onclick="closePopup()">&times;</span>
+        <div class="popup-columns">
+            <div id="popup-left" class="popup-column"></div>
+            <div id="popup-right" class="popup-column"></div>
+        </div>
+    </div>
+</div>
     <script src="impact.js"></script>
     <script src="script2.js"></script>
 </body>
