--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -458,6 +458,7 @@
     </div>
 </div>
     <script src="impact.js"></script>
+    <script src="subs.js"></script>
     <script src="script2.js"></script>
 </body>
 </html>
