--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -453,7 +453,10 @@
         <span class="close-popup" onclick="closePopup()">&times;</span>
         <div class="popup-columns">
             <div id="popup-left" class="popup-column"></div>
-            <div id="popup-right" class="popup-column"></div>
+            <div id="popup-right" class="popup-column">
+                <div id="name-dropdown"></div>
+                <select id="classification-dropdown"></select>
+            </div>
         </div>
     </div>
 </div>
