--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -63,7 +63,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img1" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img1" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome1" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell1" style="display: block;"></span></td>
                         </tr>
