--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -457,6 +457,7 @@
                 <div id="name-dropdown"></div>
                 <select id="classification-dropdown"></select>
             </div>
+            <div id="new"></div>
         </div>
     </div>
 </div>
