--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -454,8 +454,13 @@
         <div class="popup-columns">
             <div id="popup-left" class="popup-column"></div>
             <div id="popup-right" class="popup-column">
-                <div id="name-dropdown"></div>
-                <select id="classification-dropdown"></select>
+                <div id="name-dropdown">
+                    <!-- Aqui vai a parte do "Miner:" com a entrada para o nome -->
+                </div>
+                <div id="level-dropdown">
+                    <label for="classification-dropdown">Level:</label>
+                    <select id="classification-dropdown"></select>
+                </div>
                 <div id="new"></div>
             </div>
         </div>
