--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -466,8 +466,8 @@
         </div>
     </div>
 </div>
-    <script src="impact.js"></script>
-    <script src="subs.js"></script>
+    <script type="module" src="impact.js"></script>
+    <script type="module" src="subs.js"></script>
     <script src="script2.js"></script>
 </body>
 </html>
