--- a/impacto2/index.html
+++ b/impacto2/index.html
@@ -468,6 +468,7 @@
 </div>
     <script type="module" src="impact.js"></script>
     <script type="module" src="subs.js"></script>
+    <script type="module" src="dataLoader.js"></script>
     <script src="script2.js"></script>
 </body>
 </html>
