--- a/impacto/index.html
+++ b/impacto/index.html
@@ -63,7 +63,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img1" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img1" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome1" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell1" style="display: block;"></span></td>
                         </tr>
@@ -101,7 +101,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img2" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img2" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome2" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell2" style="display: block;"></span></td>
                         </tr>
@@ -139,7 +139,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img3" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img3" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome3" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell3" style="display: block;"></span></td>
                         </tr>
@@ -177,7 +177,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img4" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img4" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome4" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell4" style="display: block;"></span></td>
                         </tr>
@@ -215,7 +215,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img5" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img5" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome5" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell5" style="display: block;"></span></td>
                         </tr>
@@ -253,7 +253,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img6" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img6" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome6" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell6" style="display: block;"></span></td>
                         </tr>
@@ -291,7 +291,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img7" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img7" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome7" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell7" style="display: block;"></span></td>
                         </tr>
@@ -329,7 +329,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img8" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img8" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome8" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell8" style="display: block;"></span></td>
                         </tr>
@@ -367,7 +367,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img9" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img9" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome9" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell9" style="display: block;"></span></td>
                         </tr>
@@ -405,7 +405,7 @@
                         <tr>
                             <td>Miner:</td>
                             <td>
-                                <img id="img10" src="" style="display: none; margin: auto; width: 120px; height: auto;">
+                                <img id="img10" class="popup-trigger" src="" style="display: none; margin: auto; width: 120px; height: auto;">
                                 <span id="nome10" style="display: block; margin-top: 2px;"></span>
                                 <span id="sell10" style="display: block;"></span></td>
                         </tr>
@@ -448,7 +448,26 @@
             <h4><p><center>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></center></p></h4>
         </div>
     </div>
+    <div id="popup" class="popup-container" style="display: none;">
+    <div class="popup-content">
+        <span class="close-popup" onclick="closePopup()">&times;</span>
+        <div class="popup-columns">
+            <div id="popup-left" class="popup-column"></div>
+            <div id="popup-right" class="popup-column">
+                <div id="name-dropdown">
+                    <!-- Aqui vai a parte do "Miner:" com a entrada para o nome -->
+                </div>
+                <div id="level-dropdown">
+                    <label for="classification-dropdown">Level:</label>
+                    <select id="classification-dropdown"></select>
+                </div>
+                <div id="new"></div>
+            </div>
+        </div>
+    </div>
+</div>
     <script src="impact.js"></script>
+    <!--<script src="subs.js"></script>-->
     <script src="script2.js"></script>
 </body>
 </html>
