--- a/impacto/index.html
+++ b/impacto/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Planejador de Salas</title>
     <link rel="stylesheet" href="styles4.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
