--- a/ranking/index.html
+++ b/ranking/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles2.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
