--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458"
-     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -97,5 +95,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="contador.js"></script>
 </body>
 </html>
