--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="contador.js"></script>
 </head>
 <body>
     <div class="container">
@@ -95,6 +97,5 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <script src="contador.js"></script>
 </body>
 </html>
