--- a/eficiencia/index.html
+++ b/eficiencia/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Calculadora de Eficiência</title>
     <link rel="stylesheet" href="styles3.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458"
-     crossorigin="anonymous"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="contador.js"></script>
 </head>
 <body>
     <div class="container">
