--- a/otimizador/index.html
+++ b/otimizador/index.html
@@ -17,10 +17,11 @@
             text-align: center;
         }
         .group {
-            width: 100%;
-            height: 100%;
             background-image: url('https://static.rollercoin.com/static/img/market/racks/662a2ed024d9775f45fd6e9e.png');
             background-size: cover;
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 200px; /* Ajuste a altura conforme necessário */
         }
         .cell {
             position: relative;
@@ -31,17 +32,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-        }
-        .cell .cell-1 img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-        .group-1 img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+            object-fit: contain; /* Ajuste para não distorcer a imagem */
         }
     </style>
 </head>
@@ -51,22 +42,22 @@
     <tbody>
         <tr>
             <td colspan="2" class="group">
-                <div class="cell cell-1">
+                <div class="cell">
                     <img src="https://static.rollercoin.com/static/img/market/miners/radiant_core.gif" alt="Radiant Core">
                 </div>
             </td>
             <td colspan="2" class="group">
-                <div class="cell cell-2">
+                <div class="cell">
                     <img src="https://static.rollercoin.com/static/img/market/miners/rolleradmingauntlet.gif" alt="Roller Admin Gauntlet">
                 </div>
             </td>
             <td colspan="2" class="group">
-                <div class="cell cell-3">
+                <div class="cell">
                     <img src="https://static.rollercoin.com/static/img/market/miners/hual_tg_29.gif" alt="Hual TG 29">
                 </div>
             </td>
             <td colspan="2" class="group">
-                <div class="cell cell-4">
+                <div class="cell">
                     <img src="https://static.rollercoin.com/static/img/market/miners/hamyo_jj_p101.gif" alt="Hamyo JJ P101">
                 </div>
             </td>
@@ -93,53 +84,7 @@
                 </div>
             </td>
         </tr>
-
-        <!-- Replicar o mesmo agrupamento para os próximos grupos -->
-        <tr>
-            <td colspan="2" class="group">
-                <div class="cell cell-1">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/radiant_core.gif" alt="Radiant Core">
-                </div>
-            </td>
-            <td colspan="2" class="group">
-                <div class="cell cell-2">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/rolleradmingauntlet.gif" alt="Roller Admin Gauntlet">
-                </div>
-            </td>
-            <td colspan="2" class="group">
-                <div class="cell cell-3">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/hual_tg_29.gif" alt="Hual TG 29">
-                </div>
-            </td>
-            <td colspan="2" class="group">
-                <div class="cell cell-4">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/hamyo_jj_p101.gif" alt="Hamyo JJ P101">
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" class="group">
-                <div class="cell">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/camouflage.gif" alt="Camouflage">
-                </div>
-            </td>
-            <td colspan="2" class="group">
-                <div class="cell">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/radiant_core.gif" alt="Radiant Core">
-                </div>
-            </td>
-            <td colspan="2" class="group">
-                <div class="cell">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/rolleradmingauntlet.gif" alt="Roller Admin Gauntlet">
-                </div>
-            </td>
-            <td colspan="2" class="group">
-                <div class="cell">
-                    <img src="https://static.rollercoin.com/static/img/market/miners/hual_tg_29.gif" alt="Hual TG 29">
-                </div>
-            </td>
-        </tr>
-        <!-- Continue a replicação para mais linhas se necessário -->
+        <!-- Replicar os grupos para mais linhas, conforme necessário -->
     </tbody>
 </table>
 
