--- a/otimizador/index.html
+++ b/otimizador/index.html
@@ -16,19 +16,19 @@
             padding: 0;
             text-align: center;
         }
-        .group {
+        td.group {
             background-image: url('https://static.rollercoin.com/static/img/market/racks/662a2ed024d9775f45fd6e9e.png');
             background-size: cover;
             background-repeat: no-repeat;
-            width: 100%;
-            height: 200px; /* Ajuste a altura conforme necessário */
+            width: 50%;  /* A largura deve ser ajustada para 50% porque cada grupo tem duas colunas */
+            height: 200px;  /* Ajuste a altura conforme necessário */
         }
-        .cell {
+        td .cell {
             position: relative;
             width: 100%;
             height: 100%;
         }
-        .cell img {
+        td .cell img {
             position: absolute;
             width: 100%;
             height: 100%;
